--- a/Regression Analysis of second-hand cars.ipynb
+++ b/Regression Analysis of second-hand cars.ipynb
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('/Users/deltachan01/Desktop/Data Science/programming files/practical example/Second-hand cars.csv')\n",
+    "data = pd.read_csv('/Users/deltachan01/Desktop/Data Science/data science bootcamp/programming files/practical example/Second-hand cars.csv')\n",
     "data"
    ]
   },
@@ -928,7 +928,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a179fc9d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a17b67590>"
       ]
      },
      "execution_count": 7,
@@ -1168,7 +1168,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x102cfff10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a175bd950>"
       ]
      },
      "execution_count": 9,
@@ -1198,7 +1198,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a17b81dd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a194a0b90>"
       ]
      },
      "execution_count": 10,
@@ -1235,7 +1235,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a17bfb490>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a18928310>"
       ]
      },
      "execution_count": 11,
@@ -1267,7 +1267,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a188e54d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1963f650>"
       ]
      },
      "execution_count": 12,
@@ -1306,7 +1306,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a18ac5b50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a197c1cd0>"
       ]
      },
      "execution_count": 13,
@@ -1337,7 +1337,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a18c38a90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a198b0f10>"
       ]
      },
      "execution_count": 14,
@@ -1367,7 +1367,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a18d9ef10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a19aaca90>"
       ]
      },
      "execution_count": 15,
@@ -1654,7 +1654,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a18ed1290>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a19bdc090>"
       ]
      },
      "execution_count": 18,
